updated read me

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="col-md-1 hour">
         4:00pm
       </div>
-      <textarea class="past col-md-10" class="col-md-10 ">
+      <textarea class="present col-md-10" class="col-md-10 ">
         </textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
@@ -91,7 +91,7 @@
       <div class="col-md-1 hour">
         5:00pm
       </div>
-      <textarea class="past col-md-10" class="col-md-10 ">
+      <textarea class="future col-md-10" class="col-md-10 ">
         </textarea>
       <button class="saveBtn col-md-1"><i class='fas fa-save'></i>
 
