--- a/index.html
+++ b/index.html
@@ -23,75 +23,75 @@
     <!-- Timeblocks go here -->
 
 
-    <div class="row time-block">
-      <div class="col-md-1 hour">
+    <div class="row time-block" id= '9'>
+      <div class="col-md-1 hour" id= 'time9'>
         9:00am
       </div>
-      <textarea class="past col-md-10" class="col-md-10 ">
+      <textarea class=" col-md-10 description" class="col-md-10 ">
         </textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="row time-block">
-      <div class="col-md-1 hour">
+    <div class="row time-block" id= '10'>
+      <div class="col-md-1 hour" id= 'time10'>
         10:00am
       </div>
-      <textarea class="past col-md-10" class="col-md-10">
+      <textarea class=" col-md-10 description" class="col-md-10">
         </textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="row time-block">
-      <div class="col-md-1 hour">
+    <div class="row time-block" id= '11'>
+      <div class="col-md-1 hour" id= 'time11'>
         11:00am
       </div>
-      <textarea class="past col-md-10" class="col-md-10 ">
+      <textarea class=" col-md-10 description" class="col-md-10 ">
         </textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="row time-block">
-      <div class="col-md-1 hour">
+    <div class="row time-block" id= '12'>
+      <div class="col-md-1 hour" id= 'time12'>
         12:00pm
       </div>
-      <textarea class="past col-md-10" class="col-md-10 ">
+      <textarea class=" col-md-10 description" class="col-md-10 ">
         </textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="row time-block">
-      <div class="col-md-1 hour">
+    <div class="row time-block" id= '13'>
+      <div class="col-md-1 hour" id= 'time13'>
         1:00pm
       </div>
-      <textarea class="past col-md-10" class="col-md-10 ">
+      <textarea class=" col-md-10 description" class="col-md-10 ">
         </textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="row time-block">
-      <div class="col-md-1 hour">
+    <div class="row time-block" id= '14'>
+      <div class="col-md-1 hour" id= 'time14'>
         2:00pm
       </div>
-      <textarea class="past col-md-10" class="col-md-10">
+      <textarea class=" col-md-10 description" class="col-md-10">
         </textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="row time-block">
-      <div class="col-md-1 hour">
+    <div class="row time-block" id= '15'>
+      <div class="col-md-1 hour" id= 'time15'>
         3:00pm
       </div>
-      <textarea class="past col-md-10" class="col-md-10">
+      <textarea class=" col-md-10 description" class="col-md-10">
         </textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="row time-block">
-      <div class="col-md-1 hour">
+    <div class="row time-block" id= '16'>
+      <div class="col-md-1 hour" id= 'time16'>
         4:00pm
       </div>
-      <textarea class="present col-md-10" class="col-md-10 ">
+      <textarea class="col-md-10 description " class="col-md-10 ">
         </textarea>
       <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="row time-block">
-      <div class="col-md-1 hour">
+    <div class="row time-block" id= '17'>
+      <div class="col-md-1 hour" id= 'time17'>
         5:00pm
       </div>
-      <textarea class="future col-md-10" class="col-md-10 ">
+      <textarea class="col-md-10 description" class="col-md-10 ">
         </textarea>
       <button class="saveBtn col-md-1"><i class='fas fa-save'></i>
 
